# pjmstools

./: README.md  pyproject.toml
pjmstools/: __init__.py
pjmstools/general/: __init__.py  general.py  listoperations.py  numpy.py  numpyops.py  vectors.py
pjmstools/image/: __init__.py  analysis.py  image.py
pjmstools/plot/: plot.py
tests/: manual.py  test_general.py
